@@ -2,15 +2,16 @@
 # Changes of OTRS 
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.79.2.3 2003-05-19 15:08:17 martin Exp $
+# $Id: CHANGES,v 1.79.2.4 2003-05-25 22:56:17 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 1.1.2 (2003-?-?)
+ - (2003/05/26) fixed pic.pl bug - http://bugs.otrs.org/show_bug.cgi?id=149
  - (2003/05/19) improved text formatting of "long" messages in QueueView
-    and TicketZoom
+    TicketZoom, TicketPlain and TicketSearch
  - (2003/05/18) fixed small logic bugs in Kernel/System/PostMaster*
     improved debug options for bin/PostMaster.pl and bin/PostMasterPOP3.pl
      -=> just used -d1 (1-3) for debug level of Kernel/System/PostMaster*
